# render-template

./: install.sh  render-template.py  skel  todo.txt
actions/: ninja_build.py  ninja_targets.py
examples/hello/: Makefile  build.ninja  hello.cpp  targets.ninja
files/: CMakeLists.txt  Makefile.ninja
mods/: ninja_targets.py
templates/: Makefile.ninja  targets.yaml
